[Fixed] Static city garages to give a proximity message when a rider approaches - mantis 509
Change-Id: I01877b22dbd9d3794942ec610eb2319833d493fb

--- a/MMOCoreORB/src/Makefile.am
+++ b/MMOCoreORB/src/Makefile.am
@@ -318,6 +318,7 @@ core3_SOURCES =	$(core3_IDLS) \
 		server/zone/objects/building/components/CityHallZoneComponent.cpp \
 		server/zone/objects/building/components/DestructibleBuildingDataComponent.cpp \
 		server/zone/objects/structure/components/StructureZoneComponent.cpp \
+		server/zone/objects/structure/components/GarageDataComponent.cpp \
 		server/zone/objects/tangible/components/FireHeavyWeaponMenuComponent.cpp \
 		server/zone/objects/tangible/components/ThrowGrenadeMenuComponent.cpp \
 		server/zone/objects/tangible/powerup/PowerupObjectImplementation.cpp \
