[added] vehicle customization
Change-Id: I7884c78030dcdeae797a31e6200855fbb7669780

--- a/MMOCoreORB/src/Makefile.am
+++ b/MMOCoreORB/src/Makefile.am
@@ -279,6 +279,7 @@ core3_IDLS =	server/zone/objects/player/sessions/ImageDesignPositionObserver.cpp
 				server/zone/objects/tangible/tool/smuggler/SlicingTool.cpp \
 				server/zone/objects/tangible/tool/smuggler/PrecisionLaserKnife.cpp \
 				server/zone/objects/tangible/tool/recycle/RecycleTool.cpp \
+				server/zone/objects/tangible/tool/customize/VehicleCustomKit.cpp \
 				server/zone/objects/tangible/tool/repair/RepairTool.cpp \
 				server/zone/objects/tangible/tool/SurveyTool.cpp \
 				server/zone/objects/tangible/wearables/WearableObject.cpp \
@@ -561,6 +562,7 @@ core3_SOURCES =	$(core3_IDLS) \
 		server/zone/objects/tangible/tool/smuggler/SlicingToolImplementation.cpp \
 		server/zone/objects/tangible/tool/smuggler/PrecisionLaserKnifeImplementation.cpp \
 		server/zone/objects/tangible/tool/recycle/RecycleToolImplementation.cpp \
+		server/zone/objects/tangible/tool/customize/VehicleCustomKitImplementation.cpp \
 		server/zone/objects/tangible/tool/repair/RepairToolImplementation.cpp \
 		server/zone/objects/group/GroupObjectImplementation.cpp \
 		server/zone/objects/guild/GuildObjectImplementation.cpp \
